// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render renders properly 1`] = `
<div
  data-css-1szwbq4=""
>
  <div
    data-css-p2q3yg=""
  >
    <div
      data-css-tyhdvi=""
    />
    <Intro
      styles={
        Object {
          "data-css-unxum8": "",
        }
      }
    />
    <SearchField
      onChange={[Function]}
      styles={
        Object {
          "data-css-unxum8": "",
        }
      }
      value=""
    />
  </div>
  <div
    data-css-7551rz=""
  >
    <div
      data-css-194orap=""
    >
      <LoadingIndicator
        isLoading={false}
      />
    </div>
    <BillsList
      animated={true}
      viewer={
        Object {
          "bills": Object {
            "edges": Array [],
          },
        }
      }
    />
  </div>
</div>
`;

exports[`#render renders properly when loading 1`] = `
<div
  data-css-1szwbq4=""
>
  <div
    data-css-p2q3yg=""
  >
    <div
      data-css-tyhdvi=""
    />
    <Intro
      styles={
        Object {
          "data-css-unxum8": "",
        }
      }
    />
    <SearchField
      onChange={[Function]}
      styles={
        Object {
          "data-css-unxum8": "",
        }
      }
      value=""
    />
  </div>
  <div
    data-css-7551rz=""
  >
    <div
      data-css-194orap=""
    >
      <LoadingIndicator
        isLoading={true}
      />
    </div>
  </div>
</div>
`;

exports[`#render renders properly with query 1`] = `
<div
  data-css-1szwbq4=""
>
  <div
    data-css-p2q3yg=""
  >
    <div
      data-css-tyhdvi=""
    />
    <Intro
      styles={
        Object {
          "data-css-unxum8": "",
        }
      }
    />
    <SearchField
      onChange={[Function]}
      styles={
        Object {
          "data-css-unxum8": "",
        }
      }
      value="foo"
    />
  </div>
  <div
    data-css-7551rz=""
  >
    <div
      data-css-194orap=""
    >
      <LoadingIndicator
        isLoading={false}
      />
    </div>
    <BillsList
      animated={true}
      viewer={
        Object {
          "bills": Object {
            "edges": Array [],
          },
        }
      }
    />
  </div>
</div>
`;

exports[`on search field change updates the visible query 1`] = `
<div
  data-css-1szwbq4=""
>
  <div
    data-css-p2q3yg=""
  >
    <div
      data-css-tyhdvi=""
    />
    <Intro
      styles={
        Object {
          "data-css-unxum8": "",
        }
      }
    />
    <SearchField
      onChange={[Function]}
      styles={
        Object {
          "data-css-unxum8": "",
        }
      }
      value="foo"
    />
  </div>
  <div
    data-css-7551rz=""
  >
    <div
      data-css-194orap=""
    >
      <LoadingIndicator
        isLoading={false}
      />
    </div>
    <BillsList
      animated={false}
      viewer={
        Object {
          "bills": Object {
            "edges": Array [],
          },
        }
      }
    />
  </div>
</div>
`;
